--- a/CPSC471Project/package.json
+++ b/CPSC471Project/package.json
@@ -13,10 +13,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/inter": "^5.0.17",
+    "@fontsource/inter": "^5.0.17",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "framer-motion": "^11.0.14",
+    "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webfontloader": "^1.6.28"
