--- a/CPSC471Project/package.json
+++ b/CPSC471Project/package.json
@@ -14,7 +14,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/inter": "^5.0.17",
+    "@fontsource-variable/rubik": "^5.0.21",
     "@fontsource/inter": "^5.0.17",
+    "@fontsource/rubik": "^5.0.19",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -22,6 +24,7 @@
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
