--- a/CPSC471Project/package.json
+++ b/CPSC471Project/package.json
@@ -24,6 +24,7 @@
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.3",
     "webfontloader": "^1.6.28"
   },
