--- a/CPSC471Project/package.json
+++ b/CPSC471Project/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/error-message": "^2.0.1",
     "framer-motion": "^11.0.14",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
