--- a/CPSC471Project/package.json
+++ b/CPSC471Project/package.json
@@ -16,11 +16,15 @@
     "@fontsource-variable/inter": "^5.0.17",
     "@fontsource-variable/rubik": "^5.0.21",
     "@fontsource/inter": "^5.0.17",
+    "@fontsource/roboto": "^5.0.12",
     "@fontsource/rubik": "^5.0.19",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/error-message": "^2.0.1",
+    "@material-tailwind/react": "^2.1.9",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "framer-motion": "^11.0.14",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
